cmake_minimum_required(VERSION 2.8)

find_package(verypoco REQUIRED)
CREATE_TEST("test_fes" fes)
CREATE_TEST("test_sync" fes)
CREATE_TEST("test_async_fast" fes)
CREATE_TEST("test_async_fast_autoconnect" fes)
CREATE_TEST("test_async_delay" fes)
CREATE_TEST("test_bench" fes)
CREATE_TEST("test_nan" fes)
CREATE_TEST("test_sequence" fes)
CREATE_TEST("test_parallel" fes)
CREATE_TEST("test_parallel_sequence" fes)
CREATE_TEST("test_consumer_producer" fes)
CREATE_TEST("test_leader_follower" fes verypoco)

